# JCapy

./: .clinerules  .dockerignore  .gitignore  .jcapyrc  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_TASKS.md  MANIFEST.in  MASTER_STATUS.md  MEMORY.md  MEMORY.md.prompt.txt  Makefile  NOTICE  PRODUCTION_READY.md  PRODUCTION_READY.md.prompt.txt  README.md  README.md.prompt.txt  check_path.py  debug_import.py  docker-compose.yml  harvest_skill.prompt.txt  jcapy_proposals.md  package.json  project_map.prompt.txt  pyproject.toml  pyproject.toml.fix.txt  verify_zen_layout.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  homebrew-bump.yml  market-release.yml  release.yml  security-audit.yml  web-deploy.yml
.jcapy_certs/: ca.crt  client.crt
apps/web/: index.html  package-lock.json  package.json  server.py  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
docker/: Dockerfile  entrypoint.sh
docs/: 00-start-here.md  DAEMON_DEPLOYMENT.md  INSTALL.md  INSTALLATION.md  JCAPY_STATE_OF_THE_UNION.html  JCAPY_STATE_OF_THE_UNION.md  OBSERVABILITY.md  PLUGINS.md  PRODUCTION_READY.md  PUBLISHING_GUIDE.md  PUBLISHING_QUICKREF.md  ROADMAP.md  USER_WORKFLOW.md  architecture_map.md  journey.md  linkedin_posts.md
docs/arch/: actionable-log-stream.md  command-mode.md  interactive-help.md  interfaces.md  knowledge-lakehouse.md  ux-enhancement.md  vision_v2.md
docs/architecture/: jcapy-web-ascii-record.txt  overview.md
docs/guides/: ai-setup.md  debugging.md  deployment.md  developer-guide.md  security-guide.md  user-guide.md
docs/plans/: 2026-02-09-ux-enhancement.md  2026-02-10-gap-analysis-jcapy-vs-clawdbot.md  2026-02-11-gap-analysis-jcapy-vs-dataiku.md  2026-02-12-jcapy-super-app-evolution-design.md  2026-02-16-hybrid-architecture-design.md  2026-02-16-interactive-mission-control.md  2026-02-16-status-report.md  2026-02-17-dual-terminal.md  2026-02-18-acontext-comparison.md  2026-02-18-framework-engine-decoupling.md  2026-02-18-framework-interface-refactor.md  2026-02-18-neovim-evolution.md  2026-02-18-widget-furnishing.md  (+12 more)
jcapy-skills/: README.md  registry.yaml
scripts/: cloudflare-tunnel.sh  demo_user_journey.sh  devops_usecase.sh  fix_certs.py  init_cloud.py  jcapyctl.sh  measure_performance.py  publish.sh  publishBrew.sh  publishPip.sh  run_all_usecases.sh  setup.sh  setup_security.sh  test_tui_web_integration.py  tui_torture_test.py  update_brew_formula.py  verify_mcp.py  verify_remote.py
services/: com.jcapy.daemon.plist  jcapy-daemon.service
showcase/: MASTER_REPORT.md  README.md  README_V2.md
src/: knowledge_test.md
test_venv/: pyvenv.cfg
tests/: test_a11y.py  test_dashboard_widgets.py  test_feedback.py  test_hints.py  test_safety.py  test_ui_torture.py
(+418 files in other folders)
