[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jcapy"
version = "3.1.0"
description = "JCapy CLI - One-Army Orchestrator"
authors = [{name = "Irfan Ali", email = "nazrijz336@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "mcp>=1.2.0",
    "chromadb>=0.4.0",
]

[project.scripts]
jcapy = "jcapy.main:main"

[tool.setuptools.packages.find]
where = ["src"]
