[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jcapy"
version = "4.1.1"
description = "JCapy CLI - One-Army Orchestrator"
authors = [{name = "Irfan Ali", email = "nazrijz336@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "mcp>=1.2.0",
    "chromadb>=0.4.0",
    "posthog>=3.0.0",
]

[project.optional-dependencies]
pro = ["pinecone>=3.0.0"]

[project.scripts]
jcapy = "jcapy.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."jcapy.plugins"]
# External plugins register here
